# download

./: .gitignore  Cargo.toml  README.md
download-ffi/: Cargo.toml
download-ffi/src/: error.rs  lib.rs
download-ffi/tests/: bindings.rs
download-lib/: Cargo.toml  README.md
download-lib/src/: error.rs  file_save.rs  lib.rs  reqwest_file.rs
libdurl/: Cargo.toml  README.md  libdurl.h
libdurl/publish_lib/: libdurl.h
libdurl/src/: lib.rs
libdurl/tests/: mod.rs
src/: main.rs
src/download_file/: error.rs  file_save.rs  mod.rs  reqwest_file.rs
