[package]
name = "download-file"
version = "0.1.5"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/download"
documentation = "https://docs.rs/download-file"
description = "multi fiber download http file."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features=["full"]}
anyhow = "1"
log="0.4"
env_logger = "0.9"
structopt = "0.3"
download-lib= "0.1.3"

[profile.release]
codegen-units=1
lto="fat"
panic="abort"