[package]
name = "durl"
version = "0.1.4"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/download"
documentation = "https://docs.rs/download-file"
description = "multi fiber download http file."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
download-lib={path="./download-lib"}
tokio={version="1",features=["full"]}
anyhow = "1"
log="0.4"
env_logger = "0.9"
structopt = "0.3"



[profile.release]
codegen-units=1
lto="fat"
panic="abort"