[package]
name = "libdurl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib","cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log="0.4"
env_logger = "0.8.2"
interoptopus="0.14"
interoptopus_backend_csharp = "0.14"
interoptopus_backend_cpython="0.14"
interoptopus_backend_c="0.14"
anyhow = "1"
download-lib={path="../download-lib"}

[profile.release]
codegen-units=1
lto="fat"
panic="abort"