[package]
name = "download-lib"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/luyikk/download"
documentation = "https://docs.rs/download-file"
description = "multi fiber download http file."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features=["full"]}
thiserror = "1.0"
reqwest= { version = "0.11" , features = ["stream"]}
log="0.4"
env_logger = "0.9"
aqueue = "1.2"
async-trait = "0.1"
futures-util = "0.3"
structopt ={ version = "0.3", default-features = false }
