[package]
name = "download-lib"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/luyikk/download"
documentation = "https://docs.rs/download-file"
description = "multi fiber download http file."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest= { version = "0.11" , default-features=false, features = ["stream","rustls-tls"]}
tokio={version="1",features=["full"]}
thiserror = "1.0"
log="0.4"
aqueue = "1.2"
async-trait = "0.1"
futures-util = "0.3"