[package]
name = "libdurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
download-lib = {path="../download-lib"}
log = "0.4"
tokio = {version="1",features=["full"]}

[profile.release]
codegen-units=1
lto="fat"
panic="abort"
