[package]
name = "libdurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="libdurl"
crate-type=["staticlib"]

[dependencies]
download-lib = "0.2.2"
log = "0.4"
tokio = {version="1",features=["full"]}
slab = "0.4"

[profile.release]
codegen-units=1
lto="fat"
panic="abort"
